--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -7,12 +7,7 @@
     <title>Imersão Dev 9ª Edição</title>
   </head>
   <body>
-    <header id="header"></header>
-
-    <main id="main"></main>
-
-    <footer id="footer"></footer>
-
+    <div id="root"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
